Target java 8 for increased compatibility
run Publish workflow action in Publish environment